--- a/data/custom_train.yaml
+++ b/data/custom_train.yaml
@@ -1,6 +1,6 @@
 
-train: /content/drive/MyDrive/train_data/train 
-val: /content/drive/MyDrive/train_data/val
+train: /train_data/train 
+val: train_data/val
 
 # Classes
 names:
